--- a/package.json
+++ b/package.json
@@ -25,11 +25,18 @@
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.1.3",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic": "^5.0.5",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^2.0.0",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "underscore": "^1.9.1",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
@@ -43,7 +50,15 @@
         "APP_ID": "1125f602",
         "CHANNEL_NAME": "Master",
         "UPDATE_METHOD": "background"
-      }
-    }
+      },
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
