--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Archers Mate",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
@@ -20,13 +20,18 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/app-version": "^4.12.0",
+    "@ionic-native/clipboard": "^4.12.0",
     "@ionic-native/core": "~4.11.0",
     "@ionic-native/http": "^4.11.0",
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.1.3",
+    "cordova-android": "~7.0.0",
+    "cordova-clipboard": "^1.2.1",
     "cordova-plugin-advanced-http": "^1.11.1",
+    "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic": "^5.0.5",
@@ -39,8 +44,7 @@
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "underscore": "^1.9.1",
-    "zone.js": "0.8.26",
-    "cordova-android": "~7.0.0"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.11",
@@ -60,7 +64,9 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-app-version": {},
+      "cordova-clipboard": {}
     },
     "platforms": [
       "android"
