--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/clipboard": "^4.12.0",
     "@ionic-native/core": "~4.11.0",
     "@ionic-native/http": "^4.11.0",
+    "@ionic-native/screen-orientation": "^4.14.0",
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/pro": "2.0.3",
@@ -36,8 +37,10 @@
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic": "^5.1.2",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-screen-orientation": "^3.0.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.4.0",
+    "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -61,7 +64,8 @@
       "cordova-plugin-advanced-http": {},
       "cordova-plugin-app-version": {},
       "cordova-clipboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
       "android"
