--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/android-permissions": "^4.15.0",
     "@ionic-native/app-version": "^4.12.0",
     "@ionic-native/clipboard": "^4.12.0",
     "@ionic-native/core": "~4.11.0",
+    "@ionic-native/file": "^4.15.0",
     "@ionic-native/http": "^4.11.0",
     "@ionic-native/screen-orientation": "^4.14.0",
     "@ionic-native/splash-screen": "~4.11.0",
@@ -32,6 +34,7 @@
     "cordova-android": "~7.0.0",
     "cordova-clipboard": "^1.2.1",
     "cordova-plugin-advanced-http": "^1.11.1",
+    "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
@@ -63,9 +66,11 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-advanced-http": {},
       "cordova-plugin-app-version": {},
-      "cordova-clipboard": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-screen-orientation": {}
+      "cordova-plugin-screen-orientation": {},
+      "cordova-clipboard": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-android-permissions": {}
     },
     "platforms": [
       "android"
