--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,7 @@
 {
-  "name": "Archers Mate",
+  "name": "archers-mate",
   "integrations": {
     "cordova": {}
-  }
+  },
+  "type": "ionic-angular"
 }
