--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Archers Mate",
-  "version": "0.0.2",
+  "name": "archers-mate",
+  "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
@@ -20,29 +20,31 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/android-permissions": "^4.15.0",
-    "@ionic-native/app-version": "^4.12.0",
-    "@ionic-native/clipboard": "^4.12.0",
-    "@ionic-native/core": "~4.11.0",
-    "@ionic-native/file": "^4.15.0",
-    "@ionic-native/http": "^4.11.0",
-    "@ionic-native/screen-orientation": "^4.14.0",
-    "@ionic-native/splash-screen": "~4.11.0",
-    "@ionic-native/status-bar": "~4.11.0",
-    "@ionic/pro": "2.0.3",
-    "@ionic/storage": "^2.1.3",
+    "@ionic-native/android-permissions": "^4.16.0",
+    "@ionic-native/app-version": "^4.16.0",
+    "@ionic-native/core": "~4.15.0",
+    "@ionic-native/email-composer": "^4.16.0",
+    "@ionic-native/file": "^4.16.0",
+    "@ionic-native/http": "^4.16.0",
+    "@ionic-native/screen-orientation": "^4.16.0",
+    "@ionic-native/splash-screen": "~4.15.0",
+    "@ionic-native/sqlite": "^4.16.0",
+    "@ionic-native/status-bar": "~4.15.0",
+    "@ionic/storage": "2.2.0",
     "cordova-android": "~7.0.0",
-    "cordova-clipboard": "^1.2.1",
-    "cordova-plugin-advanced-http": "^1.11.1",
+    "cordova-plugin-advanced-http": "^2.0.1",
     "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-email-composer": "^0.8.15",
     "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-ionic": "^5.1.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-screen-orientation": "^3.0.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.4.0",
+    "cordova-sqlite-storage": "^2.5.0",
     "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -52,25 +54,27 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.11",
-    "json-server": "^0.14.0",
+    "@ionic/app-scripts": "3.2.0",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-advanced-http": {},
       "cordova-plugin-app-version": {},
-      "cordova-sqlite-storage": {},
       "cordova-plugin-screen-orientation": {},
-      "cordova-clipboard": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-android-permissions": {}
+      "cordova-plugin-android-permissions": {},
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-email-composer": {}
     },
     "platforms": [
       "android"
