--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/android-permissions": "^4.16.0",
     "@ionic-native/app-version": "^4.16.0",
+    "@ionic-native/camera": "^4.16.0",
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/email-composer": "^4.16.0",
     "@ionic-native/file": "^4.16.0",
+    "@ionic-native/file-path": "^4.17.0",
     "@ionic-native/http": "^4.16.0",
     "@ionic-native/screen-orientation": "^4.16.0",
     "@ionic-native/splash-screen": "~4.15.0",
@@ -35,11 +37,13 @@
     "cordova-plugin-advanced-http": "^2.0.1",
     "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-app-version": "^0.1.9",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-email-composer": "^0.8.15",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-filepath": "^1.4.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-screen-orientation": "^3.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
@@ -64,9 +68,6 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-advanced-http": {},
       "cordova-plugin-app-version": {},
@@ -74,7 +75,10 @@
       "cordova-plugin-file": {},
       "cordova-plugin-android-permissions": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-email-composer": {}
+      "cordova-plugin-email-composer": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-filepath": {}
     },
     "platforms": [
       "android"
